--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="keywords" content="tom natt"/>
-    <meta name="description" content="homepage of Tom Natt's site"/>
+    <meta name="keywords" content="rpg"/>
+    <meta name="description" content="{{ page.description }}"/>
     <title>{{ page.title }}</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" media="screen" type="text/css" href="/css/style.css" title="Default" />
@@ -11,7 +11,7 @@
 <body>
 
     <header class="row">
-        <h1>This is the title</h1>
+        <h1>{{ page.title }}</h1>
     </header>
 
     <div class="row">
